; ModuleID = '/home/carl/AnghaBench/proxychains-ng/src/extr_libproxychains.c_freeaddrinfo.c'
source_filename = "/home/carl/AnghaBench/proxychains-ng/src/extr_libproxychains.c_freeaddrinfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.addrinfo = type { i32 }

@.str = private unnamed_addr constant [18 x i8] c"freeaddrinfo %p \0A\00", align 1
@proxychains_resolver = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @freeaddrinfo(%struct.addrinfo* %0) #0 {
  %2 = alloca %struct.addrinfo*, align 8
  store %struct.addrinfo* %0, %struct.addrinfo** %2, align 8
  %3 = call i32 (...) @INIT()
  %4 = load %struct.addrinfo*, %struct.addrinfo** %2, align 8
  %5 = bitcast %struct.addrinfo* %4 to i8*
  %6 = call i32 @PDEBUG(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i8* %5)
  %7 = load i32, i32* @proxychains_resolver, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %12, label %9

9:                                                ; preds = %1
  %10 = load %struct.addrinfo*, %struct.addrinfo** %2, align 8
  %11 = call i32 @true_freeaddrinfo(%struct.addrinfo* %10)
  br label %15

12:                                               ; preds = %1
  %13 = load %struct.addrinfo*, %struct.addrinfo** %2, align 8
  %14 = call i32 @proxy_freeaddrinfo(%struct.addrinfo* %13)
  br label %15

15:                                               ; preds = %12, %9
  ret void
}

declare dso_local i32 @INIT(...) #1

declare dso_local i32 @PDEBUG(i8*, i8*) #1

declare dso_local i32 @true_freeaddrinfo(%struct.addrinfo*) #1

declare dso_local i32 @proxy_freeaddrinfo(%struct.addrinfo*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
